--- a/app/catalog/templates/edit_book.html
+++ b/app/catalog/templates/edit_book.html
@@ -7,7 +7,7 @@
         <h4 class="form">{{fun}} Book</h4>
 <br><br>
         {{form.hidden_tag()}}
-        {{wtf.quick_form(form}}
+        {{wtf.quick_form(form)}}
 
         </div>
 
